--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 *.tlog
 *.idb
 *.lastbuildstate
+gpu_ex_03_src/GlowingTeapot/GlowingTeapot.vcxproj
+gpu_ex_03_src/PumpingTeapot/PumpingTeapot.vcxproj
+gpu_ex_03_src/SSAA/SSAA.vcxproj
