yet another update on .gitingore, fixed vertex shader on Task 03,a(pumping), feel free to unchain the HULKPOT

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 gpu_ex_03_src/GlowingTeapot/GlowingTeapot.vcxproj
 gpu_ex_03_src/PumpingTeapot/PumpingTeapot.vcxproj
 gpu_ex_03_src/SSAA/SSAA.vcxproj
+*.opensdf
