--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ gpu_ex_03_src/GlowingTeapot/GlowingTeapot.vcxproj
 gpu_ex_03_src/PumpingTeapot/PumpingTeapot.vcxproj
 gpu_ex_03_src/SSAA/SSAA.vcxproj
 *.opensdf
+gpu_ex_04_src/HairyBunny/HairyBunny.vcxproj.filters
