--- a/gpu_ex_04_src/HairyBunny/HairyBunny.vcxproj
+++ b/gpu_ex_04_src/HairyBunny/HairyBunny.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="HairyBunny.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bunny.geom" />
     <None Include="hair.frag" />
     <None Include="hair.geom" />
     <None Include="hair.vert" />
