--- a/gpu_ex_04_src/HairyBunny/HairyBunny.vcxproj
+++ b/gpu_ex_04_src/HairyBunny/HairyBunny.vcxproj
@@ -92,6 +92,7 @@
     <None Include="hair.vert" />
     <None Include="simple.frag" />
     <None Include="simple.vert" />
+    <None Include="thickHairGeom2.geom" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
